# bookshelf

./: .gitignore  .versionrc.json  CLAUDE.md  Makefile  README.md  package.json  pnpm-lock.yaml  turbo.json
.claude/agent-memory/frontend-architect/: MEMORY.md
.claude/agents/: fastapi-backend-engineer.md  frontend-architect.md
.github/workflows/: ci.yml  deploy-core.yml  deploy-migrations.yml
core/: .coverage  .dockerignore  .env.example  CLAUDE.md  Dockerfile  Makefile  fly.toml  pyproject.toml  pyrightconfig.json
core/src/: __init__.py
core/src/app/: __init__.py  config.py  dependencies.py  main.py  models.py  supabase.py
core/src/app/routers/: collection.py  discogs.py  playlists.py  users.py
core/src/app/services/: __init__.py  collection.py  discogs.py  discogs_search.py  playlists.py
core/tests/: conftest.py  test_collection.py  test_discogs.py  test_main.py  test_models.py  test_playlists.py  test_service_collection.py  test_service_discogs.py  test_service_playlists.py  test_users.py
db/: CLAUDE.md  README.md
db/supabase/: config.toml
db/supabase/migrations/: 20260213163849_create_users_table_functions_and_handler.sql  20260213184746_add_discogs_access_token_secret.sql  20260213191217_create_releases_table.sql  20260213222327_create_playlists_tables.sql  20260213232705_add_cover_image_to_playlist_tracks.sql  20260217004340_fix_handle_new_user_trigger_and_search_paths.sql  (+2 more)
scripts/: toml-updater.js
web/: .prettierignore  CLAUDE.md  eslint.config.mjs  next.config.ts  package.json  vitest.config.ts
web/src/: middleware.test.ts  middleware.ts
(+99 files in other folders)
